[package]
name = "flta_demo-flta"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "flta_demo-flta"
path = "flta.rs"

[dependencies]
uom = "0.31"
geo = "0.18"
#terrain_database = { git = "https://github.com/aeronautical-informatics/openTAWS.git", package = "terrain_database", rev = "fb9f75a" }
#taws_primitives = { git = "https://github.com/aeronautical-informatics/openTAWS.git", package = "taws_primitives", rev = "fb9f75a" }
terrain_database = { git = "https://github.com/aeronautical-informatics/openTAWS.git", package = "terrain_database", rev = "14d401a" }
taws_primitives = { git = "https://github.com/aeronautical-informatics/openTAWS.git", package = "taws_primitives", rev = "14d401a" }
#libc = { git = "https://github.com/Steav005/libc" }
# Because of some weird reason we are getting an error if we use the same libc version as the l4rust libraries.
# Error: found two different crates with name 'libc'
# This workaround just uses the previous commit (which in this case is just before a version bump commit)
libc = { git = "https://github.com/Steav005/libc", rev = "f5d9656" }