[package]
name = "l4"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda @ gmx . de>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
num = "0.2"
libc = { git = "https://github.com/humenda/libc" }

[dependencies.bitflags]
version = "1.0"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.num-derive]
version = "0.2.3"
default-features = false

[features]
default = ["std"]
std = []
