[package]
name = "l4"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda @ gmx . de>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
num = "0.4"
#libc = "0.2.50"
libc = { git = "https://github.com/Steav005/libc"}

[dependencies.bitflags]
version = "1.3.2"
default-features = false

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[dependencies.num-derive]
version = "0.3.3"
default-features = false

[features]
default = ["std"]
std = []
