[package]
name = "l4_derive"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda@gmx.de>"]
edition = "2018"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
lazy_static = "1.4.0"
quote = "0.6.13"
proc-macro2 = "0.4.30"

[dependencies.syn]
version = "0.15.44"
features = ["derive", "clone-impls", "full", "parsing", "printing", "proc-macro", "extra-traits"]
