[package]
name = "l4re"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda @ gmx . de>"]
edition = "2021"

[lib]
path = "lib.rs"

[build-dependencies]
bindgen = "0.66"

[dependencies.l4]
path = "../l4-rust"
# ToDo: make this conditional
default-features = false

[dependencies.l4_derive]
path = "../l4_derive-rust"
