[package]
name = "l4"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda @ gmx . de>"]

[lib]
path = "lib.rs"

[dependencies]
libc = "0.2.43"
#l4-derive = { path = "l4-derive" } 

[dependencies.bitflags]
version = "1.0"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.num-derive]
version = "0.2.3"
default-features = false

[features]
default = []
