[package]
name = "ox_rcalc-server"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda@gmx.de>"]
edition = "2018"
build = "build.rs"

[dependencies]
l4_sys = { path = "../../../l4rust/l4-sys-rust" }
l4 = { path = "../../../l4rust/l4-rust" }
l4re = { path = "../../../l4rust/l4re-rust" }
l4_derive = { path = "../../../l4rust/l4_derive-rust" }

[build-dependencies]
l4_derive = { path = "../../../l4rust/l4_derive-rust" }
