[package]
name = "shm_rust-server"
version = "0.1.0"
authors = ["streicher <shumenda@gmx.de>"]
edition = "2018"

[[bin]]
name = "shm_rust-server"
path = "server.rs"

[build-dependencies]
# This dirty solution is required until BID / Cargo integration works better
l4_derive = { path = "../../../l4rust/l4_derive-rust/" }

[dependencies]
#libc = "0.2.43"
libc = { git = "https://github.com/Steav005/libc"}
