[package]
name = "bench0-server"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda@gmx.de>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "bench0-server"
path = "server.rs"

[build-dependencies]
l4_derive = { path = "../../../../l4rust/l4_derive-rust" }

[dependencies]
libc = "0.2.51"
