[package]
name = "two_task_ipc-client"
version = "0.1.0"
authors = ["streicher <shumenda@gmx.de>"]

[[bin]]
name = "two_task_ipc-client"
path = "client.rs"

[dependencies]
#libc = "0.2.43"
#libc = { git = "https://github.com/Steav005/libc" }
# Because of some weird reason we are getting an error if we use the same libc version as the l4rust libraries.
# Error: found two different crates with name 'libc'
# This workaround just uses the previous commit (which in this case is just before a version bump commit)
libc = { git = "https://github.com/Steav005/libc", rev = "f5d9656" }
