[package]
name = "two_task_ipc-client"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda@gmx.de>"]
edition = "2021"

[[bin]]
name = "two_task_ipc-client"
path = "client.rs"

[dependencies]
l4 = { path = "../../../../l4rust/l4-rust" }
libc = "0.2.147"
l4re = { path = "../../../../l4rust/l4re-rust" }
