[package]
name = "two_task_ipc-server"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda@gmx.de>"]
edition = "2021"

[[bin]]
name = "two_task_ipc-server"
path = "server.rs"

[dependencies]
l4_sys = { path = "../../../../l4rust/l4-sys-rust/" }
l4re = { path = "../../../../l4rust/l4re-rust/" }
libc = "0.2.147"
