
## Makefile.am for SDL using the dope video driver

noinst_LTLIBRARIES = libvideo_dope.la
libvideo_dope_la_SOURCES = $(DOPE_SRCS)

# The SDL dope video driver sources
DOPE_SRCS = 			\
	SDL_dopevideo.h	\
	SDL_dopeevents.h	\
	SDL_dopeevents.c	\
	SDL_dopemouse.c		\
	SDL_dopevideobase.c \
	SDL_dopevideowork.c \
	SDL_dopevideowm.c

