## Makefile.am for SDL using the l4fb video driver

noinst_LTLIBRARIES = libvideo_l4fb.la
libvideo_l4fb_la_SOURCES = $(L4FB_SRCS)

# The SDL l4fb video driver sources
L4FB_SRCS = 			\
	SDL_l4fbvideo.h	\
	SDL_l4fbevents.h	\
	SDL_l4fbevents.c	\
	SDL_l4fbmouse.c		\
	SDL_l4fbvideobase.c \
	SDL_l4fbvideowork.c \
	SDL_l4fbvideowm.c

