
## Makefile.am for SDL using the ovlwm video driver

noinst_LTLIBRARIES = libvideo_ovlwm.la
libvideo_ovlwm_la_SOURCES = $(OVLWM_SRCS)

# The SDL ovlwm video driver sources
OVLWM_SRCS =             \
	SDL_ovlwmvideo.h     \
	SDL_ovlwmevents.h    \
	SDL_ovlwmevents.c    \
	SDL_ovlwmmouse.c     \
	SDL_ovlwmvideobase.c \
	SDL_ovlwmvideowork.c \
	SDL_ovlwmvideowm.c

